<resources>
    <string name="app_name">AppCinema</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="text">Loading…</string>
    <string name="recommended_movie">Recommended movie</string>
    <string name="back">BACK</string>
    <string name="please_enter_your_login">Please enter your login</string>
    <string name="please_enter_your_password">Please enter your password</string>
    <string name="registration">registration</string>
    <string name="please_login_to_your_account">Please login to your account</string>
    <string name="text_bootom">Ввойдите в свою учетную запись </string>
    <string name="sign">войти</string>
    <string name="Reg">Регистрация</string>
    <string name="email">Введите email</string>
    <string name="pass">Введите пароль</string>
    <string name="name">Введите ваше имя</string>
    <string name="movie">Movie</string>
    <string name="serial">Serial</string>
    <string name="please_choose_year">Please choose year</string>
    <string name="since">Since</string>
    <string name="until">Until</string>
    <string name="please_choose_a_movie_category">Please сhoose a movie category</string>
    <string name="get_movie">get movie</string>
    <string name="random_selection">Random selection</string>
    <string name="back_button">back</string>
    <string name="log_out">log out</string>
</resources>