<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AuthorizationFragment"
    android:id="@+id/root">

    <EditText
        android:id="@+id/login"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:layout_marginLeft="100dp"
        android:layout_marginTop="350dp"
        android:hint="@string/please_enter_your_login"
        android:inputType="textEmailAddress">
    </EditText>
    <EditText
        android:id="@+id/password"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:layout_marginLeft="100dp"
        android:layout_marginTop="400dp"
        android:hint="@string/please_enter_your_password"
        android:inputType="textPassword">
    </EditText>
    <Button
        android:id="@+id/sign_in"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:text="Sign in"
        android:layout_marginLeft="60dp"
        android:layout_marginTop="470dp">
    </Button>
    <Button
        android:id="@+id/registration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/registration"
        android:layout_marginLeft="200dp"
        android:layout_marginTop="470dp">
    </Button>

    <Button
        android:id="@+id/button_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Back"
        android:layout_marginTop="520dp"
        android:layout_marginLeft="160dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="90dp"
        android:layout_marginTop="100dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/please_login_to_your_account"
        android:textColor="#610"
        android:textSize="20sp" />

</FrameLayout>